# BaseJniProject

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/gd/snm/basejnipro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CPlusDemo.cpp  CPlusDemo.h  Cdemo.cpp  Log.h  native-lib.cpp
app/src/main/java/cn/gd/snm/basejnipro/: DanActivity.kt  MainActivity.kt  Person.kt  ThreadActivity.kt
app/src/main/res/layout/: activity_dan.xml  activity_main.xml  activity_thread.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/gd/snm/basejnipro/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
